Opened 16 years ago
Closed 16 years ago
#3921 closed bug (fixed)
Problem mounting audio CD.
Reported by: | bga | Owned by: | bga |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Disk | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Whenever I try to mount an audio CD (with cdda-fs), I get the following in syslog:
2009-05-10 20:17:19 KERN: Media changed from /dev/disk/atapi/1/master/raw 2009-05-10 20:17:19 KERN: KDiskDeviceManager::_ScanPartition(/dev/disk/atapi/1/master/raw) 2009-05-10 20:17:19 KERN: trying: partitioning_systems/intel/extended/v1 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: partitioning_systems/intel/map/v1 2009-05-10 20:17:19 KERN: intel: pm_identify_partition(11, 1: 0, 367243264, 2048) 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/bfs/v1 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/devfs/v1 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/rootfs/v1 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: partitioning_systems/session/v1 2009-05-10 20:17:19 KERN: raw_command: 2009-05-10 20:17:19 KERN: returned: 0.699 2009-05-10 20:17:19 KERN: trying: file_systems/attribute_overlay/v1 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/cdda/v1 2009-05-10 20:17:19 KERN: raw_command: 2009-05-10 20:17:19 KERN: 01. 00:02.33 (length 02:02.32) 2009-05-10 20:17:19 KERN: 02. 02:04.65 (length 02:44.00) 2009-05-10 20:17:19 KERN: 03. 04:48.65 (length 03:28.33) 2009-05-10 20:17:19 KERN: 04. 08:17.23 (length 02:47.65) 2009-05-10 20:17:19 KERN: 05. 11:05.13 (length 02:36.47) 2009-05-10 20:17:19 KERN: 06. 13:41.60 (length 03:35.03) 2009-05-10 20:17:19 KERN: 07. 17:16.63 (length 02:37.07) 2009-05-10 20:17:19 KERN: 08. 19:53.70 (length 05:05.05) 2009-05-10 20:17:19 KERN: 09. 24:59.00 (length 02:37.53) 2009-05-10 20:17:19 KERN: 10. 27:36.53 (length 02:42.07) 2009-05-10 20:17:19 KERN: 11. 30:18.60 (length 02:41.23) 2009-05-10 20:17:19 KERN: 12. 33:00.08 (length 01:18.67) 2009-05-10 20:17:19 KERN: 13. 34:19.00 (length 05:33.68) 2009-05-10 20:17:19 KERN: returned: 0.8 2009-05-10 20:17:19 KERN: trying: file_systems/ext2/v1 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: returned: -2147483648 2009-05-10 20:17:19 KERN: trying: file_systems/fat/v1 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/iso9660/v1 2009-05-10 20:17:19 KERN: identify(11, 0x81404d80) 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/nfs/v1 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/ntfs/v1 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/reiserfs/v1 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:19 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:19 KERN: check_sense: Illegal request 2009-05-10 20:17:19 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/userlandfs/v1 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: trying: file_systems/write_overlay/v1 2009-05-10 20:17:19 KERN: returned: -1 2009-05-10 20:17:19 KERN: scanning with: file_systems/cdda/v1 2009-05-10 20:17:19 KERN: raw_command: 2009-05-10 20:17:21 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:21 KERN: raw_command: 2009-05-10 20:17:23 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:23 KERN: raw_command: 2009-05-10 20:17:23 KERN: 01. 00:02.33 (length 02:02.32) 2009-05-10 20:17:23 KERN: 02. 02:04.65 (length 02:44.00) 2009-05-10 20:17:23 KERN: 03. 04:48.65 (length 03:28.33) 2009-05-10 20:17:23 KERN: 04. 08:17.23 (length 02:47.65) 2009-05-10 20:17:23 KERN: 05. 11:05.13 (length 02:36.47) 2009-05-10 20:17:23 KERN: 06. 13:41.60 (length 03:35.03) 2009-05-10 20:17:23 KERN: 07. 17:16.63 (length 02:37.07) 2009-05-10 20:17:23 KERN: 08. 19:53.70 (length 05:05.05) 2009-05-10 20:17:23 KERN: 09. 24:59.00 (length 02:37.53) 2009-05-10 20:17:23 KERN: 10. 27:36.53 (length 02:42.07) 2009-05-10 20:17:23 KERN: 11. 30:18.60 (length 02:41.23) 2009-05-10 20:17:23 KERN: 12. 33:00.08 (length 01:18.67) 2009-05-10 20:17:23 KERN: 13. 34:19.00 (length 05:33.68) 2009-05-10 20:17:24 KERN: Media changed from /dev/disk/atapi/1/master/raw 2009-05-10 20:17:24 KERN: KDiskDeviceManager::_ScanPartition(/dev/disk/atapi/1/master/raw) 2009-05-10 20:17:24 KERN: trying: partitioning_systems/intel/extended/v1 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: partitioning_systems/intel/map/v1 2009-05-10 20:17:24 KERN: intel: pm_identify_partition(11, 1: 0, 367243264, 2048) 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/bfs/v1 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/devfs/v1 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/rootfs/v1 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: partitioning_systems/session/v1 2009-05-10 20:17:24 KERN: raw_command: 2009-05-10 20:17:24 KERN: returned: 0.699 2009-05-10 20:17:24 KERN: trying: file_systems/attribute_overlay/v1 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/cdda/v1 2009-05-10 20:17:24 KERN: raw_command: 2009-05-10 20:17:24 KERN: 01. 00:02.33 (length 02:02.32) 2009-05-10 20:17:24 KERN: 02. 02:04.65 (length 02:44.00) 2009-05-10 20:17:24 KERN: 03. 04:48.65 (length 03:28.33) 2009-05-10 20:17:24 KERN: 04. 08:17.23 (length 02:47.65) 2009-05-10 20:17:24 KERN: 05. 11:05.13 (length 02:36.47) 2009-05-10 20:17:24 KERN: 06. 13:41.60 (length 03:35.03) 2009-05-10 20:17:24 KERN: 07. 17:16.63 (length 02:37.07) 2009-05-10 20:17:24 KERN: 08. 19:53.70 (length 05:05.05) 2009-05-10 20:17:24 KERN: 09. 24:59.00 (length 02:37.53) 2009-05-10 20:17:24 KERN: 10. 27:36.53 (length 02:42.07) 2009-05-10 20:17:24 KERN: 11. 30:18.60 (length 02:41.23) 2009-05-10 20:17:24 KERN: 12. 33:00.08 (length 01:18.67) 2009-05-10 20:17:24 KERN: 13. 34:19.00 (length 05:33.68) 2009-05-10 20:17:24 KERN: returned: 0.8 2009-05-10 20:17:24 KERN: trying: file_systems/ext2/v1 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: returned: -2147483648 2009-05-10 20:17:24 KERN: trying: file_systems/fat/v1 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/iso9660/v1 2009-05-10 20:17:24 KERN: identify(11, 0x81404f00) 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/nfs/v1 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/ntfs/v1 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/reiserfs/v1 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:24 KERN: atapi 1-0 error: device indicates transfer error after dma 2009-05-10 20:17:24 KERN: check_sense: Illegal request 2009-05-10 20:17:24 KERN: cd_read(): request.Wait() returned: General system error 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/userlandfs/v1 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: trying: file_systems/write_overlay/v1 2009-05-10 20:17:24 KERN: returned: -1 2009-05-10 20:17:24 KERN: scanning with: file_systems/cdda/v1 2009-05-10 20:17:24 KERN: raw_command: 2009-05-10 20:17:26 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:26 KERN: raw_command: 2009-05-10 20:17:28 KERN: ata 1 error: command failed, error bit is set: 0x50 2009-05-10 20:17:28 KERN: raw_command: 2009-05-10 20:17:28 KERN: 01. 00:02.33 (length 02:02.32) 2009-05-10 20:17:28 KERN: 02. 02:04.65 (length 02:44.00) 2009-05-10 20:17:28 KERN: 03. 04:48.65 (length 03:28.33) 2009-05-10 20:17:28 KERN: 04. 08:17.23 (length 02:47.65) 2009-05-10 20:17:28 KERN: 05. 11:05.13 (length 02:36.47) 2009-05-10 20:17:28 KERN: 06. 13:41.60 (length 03:35.03) 2009-05-10 20:17:28 KERN: 07. 17:16.63 (length 02:37.07) 2009-05-10 20:17:28 KERN: 08. 19:53.70 (length 05:05.05) 2009-05-10 20:17:28 KERN: 09. 24:59.00 (length 02:37.53) 2009-05-10 20:17:28 KERN: 10. 27:36.53 (length 02:42.07) 2009-05-10 20:17:28 KERN: 11. 30:18.60 (length 02:41.23) 2009-05-10 20:17:28 KERN: 12. 33:00.08 (length 01:18.67) 2009-05-10 20:17:28 KERN: 13. 34:19.00 (length 05:33.68)
Also, in the root dir I can see 2 directories that were created: "Audio CD" and "Audio CD1". The second one is where the CD is actually mounted, but the first one was created by mounting the CD too (in fact, I see the CD icon show in the Desktop, disappear and show again.
Change History (7)
comment:1 by , 16 years ago
comment:2 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Yes, I did some more testing and this seems to be a cdda-fs bug. I am on it.
comment:3 by , 16 years ago
Summary: | New ATA stack and audio CD problem. → Problem mounting audio CD. |
---|
comment:4 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | assigned → new |
This is actually a automounter bug. If automatic disk mounting is disable and you manually mount the disk (via Tracker, not the command line), the double mounting does not happen. If automatic disk mounting is enabled, then it will be mounted, unmounted and mounted again.
Assigning to stippi as he has been playing with automounter.
comment:5 by , 16 years ago
Owner: | changed from | to
---|
No, it is not an auto mounter bug. It's a bug in the device manager or CDDA FS, there are two notifications "device added" when inserting an audio CD. The reason you don't see the bug when mounting manually is that nobody listens to the double notifications in this situation.
comment:6 by , 16 years ago
Owner: | changed from | to
---|
Interesting. I will take a second look at it then.
comment:7 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
It was really a disk device manager problem. Fixed in hrev30774.
The errors can be ignored. They stem from the normal read commands that are not valid for the audio cd and are therefore aborted. The errors are handled correctly and the other filesystems that do not support audio cds get back the errors. The cdda fs, using the audio cd specific commands works however (indicated by the track list that is dumped). I have seen the double mount as well but I think it is not related to the ATA stack. Can you verify that this doesn't happen with the old IDE stack? I think I remember seeing it there as well.