- Check if we had any changes in status before sending a notification for a new   inserted media. This fixes ticket #3921.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30774 a95241bf-73f2-0310-859d-f6bbb57e9c96